# fstore

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
axum-unix/: Cargo.toml
axum-unix/src/: endpoint.rs  lib.rs  serde.rs
crates/fstore/: Cargo.toml
crates/fstore-cli/: Cargo.toml
crates/fstore-cli/src/: client.rs  conf.rs  main.rs  print.rs
crates/fstore-core/: Cargo.toml
crates/fstore-core/src/: db.rs  error.rs  fs.rs  lib.rs  model.rs  progress.rs  store.rs
crates/fstore-core/src/db/: model.rs
crates/fstore-core/src/fs/: file_type.rs  hash.rs  part.rs
crates/fstore/src/: cli.rs  http.rs  main.rs  model.rs  print.rs
crates/fstore/src/http/: axum.rs
crates/fstored/: Cargo.toml
crates/fstored/src/: conf.rs  lib.rs  main.rs  progress.rs  server.rs  store.rs
crates/fstored/src/server/: error.rs  router.rs
db/: api.sql
dmon/: Cargo.toml
dmon/src/: fork.rs  fs.rs  lib.rs  pidfile.rs  user.rs
fstore/: Cargo.toml
fstore-core/: Cargo.toml
fstore-core/src/: db.rs  error.rs  fs.rs  lib.rs
fstore-core/src/db/: model.rs
fstore-core/src/fs/: hash.rs  part.rs  rm.rs
fstore/src/: cli.rs  error.rs  http.rs  lib.rs  main.rs  model.rs
fstored/: Cargo.toml
fstored/src/: conf.rs  core.rs  error.rs  lib.rs  main.rs  server.rs  store.rs
fstored/src/core/: db.rs  fs.rs
fstored/src/core/db/: model.rs
fstored/src/core/fs/: file_type.rs  hash.rs  lock.rs
fstored/src/server/: error.rs  router.rs
