[workspace]
resolver = "2"
members = [
    "fstore",
    "fstore-core",
    "fstored",
    "timber",
]

[workspace.dependencies]
chrono = "0.4"
clap = "4"
log = "0.4"
serde = "1"
serde_yaml = "0.9"
shadow-rs = "0.26"
sqlx = "0.7"
time = "0.3"
thiserror = "1"
tokio = "1"
tokio-util = "0.7"
uuid = "1"
