[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
axum = "0.7"
axum-extra = "0.9"
base16ct = "0.2"
bytes = "1"
bytesize = "1"
chrono = "0.4"
chrono-humanize = "0.2"
clap = "4"
crossterm = "0.27"
futures = "0.3"
futures-core = "0.3"
libc = "0.2"
log = "0.4"
magic = "0.16"
mime = "0.3"
num_cpus = "1"
num-format = "0.4"
reqwest = "0.12"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shadow-rs = "0.27"
sqlx = "0.7"
tabled = "0.15"
time = "0.3"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
url = "2"
uuid = "1"
walkdir = "2"
