[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/genekoval/fstore"

[workspace.dependencies]
axum = "0.7"
axum-extra = "0.9"
axum-range = "0.4"
axum-unix = { version = "0.2", registry = "genya" }
base16ct = "0.2"
bytes = "1"
bytesize = "1"
chrono = "0.4"
chrono-humanize = "0.2"
clap = "4"
crossterm = "0.28"
dmon = { version = "0.1", registry = "genya" }
futures = "0.3"
futures-core = "0.3"
headers = "0.4"
libc = "0.2"
log = "0.4"
magic = "0.16"
mime = "0.3"
mime2ext = "0.1"
num_cpus = "1"
num-format = "0.4"
pgtools = { version = "0.1", registry = "genya" }
ratatui = "0.28"
reqwest = "0.12"
serde = "1"
serde_json = "1"
sha2 = "0.10"
shadow-rs = "0.32"
sqlx = "0.8"
sqlx-helper-macros = { version = "0.1", registry = "genya" }
tabled = "0.15"
timber = { version = "0.1", registry = "genya" }
time = "0.3"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.8"
url = "2"
uuid = "1"
walkdir = "2"
