[package]
name = "fstore-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base16ct = "0.2"
chrono = { workspace = true }
fstore = { path = "../fstore" }
libc = "0.2"
log = { workspace = true }
magic = "0.16"
sha2 = "0.10"
serde = { workspace = true }
sql-helper-macros = { path = "../sql-helper-macros" }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
