[package]
name = "fstore-core"
version = "0.3.6"
edition = "2021"

[dependencies]
base16ct = "0.2"
bytes = "1"
chrono = { workspace = true }
fstore = { path = "../fstore" }
futures = "0.3"
libc = "0.2"
log = { workspace = true }
magic = "0.16"
pgtools = { path = "../pgtools" }
sha2 = "0.10"
serde = { workspace = true }
sql-helper-macros = { path = "../sql-helper-macros" }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-util = "0.7"
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
