[package]
name = "fstored"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.7"
axum-unix = { path = "../axum-unix", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dmon = { path = "../dmon" }
fstore = { path = "../fstore" }
fstore-core = { path = "../fstore-core" }
log = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_yaml = "0.9"
shadow-rs = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
timber = { path = "../timber", features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
url = "2"

[build-dependencies]
shadow-rs = { workspace = true }
