[package]
name = "fstored"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["async-read-body", "typed-header"] }
axum-unix = { path = "../axum-unix", features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
dmon = { path = "../dmon" }
fstore = { path = "../fstore" }
fstore-core = { path = "../fstore-core" }
log = { workspace = true, features = ["serde"] }
mime = "0.3"
serde = { workspace = true }
serde_yaml = { workspace = true }
shadow-rs = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
timber = { path = "../timber", features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
url = "2"
uuid = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
