[package]
name = "fstore-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = { version = "1" }
chrono-humanize = { version = "0.2" }
clap = { workspace = true, features = ["derive", "env"] }
fstore = { path = "../fstore", features = ["http"] }
log = { workspace = true }
num-format = { version = "0.4", features = ["with-system-locale"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { workspace = true }
tabled = { version = "0.15" }
tokio = { workspace = true, features = ["io-std", "rt"] }
tokio-util = { workspace = true }
url = { workspace = true }

[[bin]]
name = "fstore"
path = "src/main.rs"
