[package]
name = "fstore-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytesize = { workspace = true }
chrono-humanize = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
num-format = { workspace = true, features = ["with-system-locale"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true, features = ["io-std", "rt"] }
tokio-util = { workspace = true }
url = { workspace = true }

[dependencies.fstore]
path = "../fstore"
version = "0.4"
registry = "fstore"
features = ["http"]

[[bin]]
name = "fstore"
path = "src/main.rs"
