[package]
name = "fstore-core"
version = "0.3.6"
edition = "2021"

[dependencies]
base16ct = "0.2"
bytes = "1"
chrono = { workspace = true }
fstore = { path = "../fstore" }
futures = "0.3"
libc = "0.2"
log = { workspace = true }
magic = "0.16"
num_cpus = "1"
sha2 = "0.10"
serde = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
tokio-util = { workspace = true, features = ["io"] }
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walkdir = "2"

[dependencies.pgtools]
git = "https://git.aurora.aur/genya/pgtools.git"

[dependencies.sqlx-helper-macros]
git = "https://git.aurora.aur/genya/sqlx-helper-macros.git"
