[package]
name = "fstore-core"
version.workspace = true
edition.workspace = true

[dependencies]
base16ct = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
fstore = { path = "../fstore" }
futures = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
magic = { workspace = true }
num_cpus = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
tokio-util = { workspace = true, features = ["io", "rt"] }
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }

[dependencies.pgtools]
git = "https://git.aurora.aur/genya/pgtools.git"

[dependencies.sqlx-helper-macros]
git = "https://git.aurora.aur/genya/sqlx-helper-macros.git"
