[package]
name = "fstore-core"
version = "0.4.1"
edition.workspace = true

[dependencies]
base16ct = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
magic = { workspace = true }
num_cpus = { workspace = true }
pgtools = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
sqlx-helper-macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
tokio-util = { workspace = true, features = ["io", "rt"] }
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }

[dependencies.fstore]
path = "../fstore"
version = "0.4"
registry = "fstore"
