[package]
name = "fstore"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

# HTTP dependencies
bytes = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "stream"], optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"], optional = true }

[features]
http = [
    "dep:bytes",
    "dep:futures-core",
    "dep:mime",
    "dep:reqwest",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:url",
]
