[package]
name = "fstore"
version = "0.4.2"
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

# axum dependencies
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }

# HTTP dependencies
bytes = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
headers = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "stream"], optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"], optional = true }

[features]
axum = ["http", "dep:axum", "axum-extra/async-read-body", "tokio-util/io"]
http = [
    "dep:bytes",
    "dep:futures-core",
    "dep:headers",
    "dep:mime",
    "dep:reqwest",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:url",
]
