[package]
name = "fstored"
version = "0.3.6"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = [
    "async-read-body",
    "typed-header",
] }
clap = { workspace = true, features = ["derive", "env"] }
crossterm = { workspace = true }
fstore = { path = "../fstore" }
fstore-core = { path = "../fstore-core" }
log = { workspace = true, features = ["serde"] }
mime = "0.3"
ratatui = "0.26"
serde = { workspace = true }
serde_yaml = { workspace = true }
shadow-rs = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dependencies.axum-unix]
git = "https://git.aurora.aur/genya/axum-unix.git"
features = ["serde"]

[dependencies.dmon]
git = "https://git.aurora.aur/genya/dmon-rs.git"

[dependencies.timber]
git = "https://git.aurora.aur/genya/timber-rs.git"
features = ["serde"]

[build-dependencies]
shadow-rs = { workspace = true }
