[package]
name = "fstored"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = [
    "async-read-body",
    "typed-header",
] }
axum-unix = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
crossterm = { workspace = true }
dmon = { workspace = true }
fstore = { path = "../fstore" }
fstore-core = { path = "../fstore-core" }
log = { workspace = true, features = ["serde"] }
mime = "0.3"
ratatui = "0.26"
serde = { workspace = true }
serde_yaml = { workspace = true }
shadow-rs = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
timber = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
