[package]
name = "fstored"
version = "0.5.1"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-range = { workspace = true }
axum-unix = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
crossterm = { workspace = true }
dmon = { workspace = true }
log = { workspace = true, features = ["serde"] }
mime = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
shadow-rs = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
timber = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = { workspace = true }
toml = { workspace = true, features = ["parse"] }
url = { workspace = true }
uuid = { workspace = true }

[dependencies.fstore]
path = "../fstore"
version = "0.4"
registry = "fstore"

[dependencies.fstore-core]
path = "../fstore-core"
version = "0.4"
registry = "fstore"

[build-dependencies]
shadow-rs = { workspace = true }
